# coup-o-clock

./: .gitignore  .prettierignore  .prettierrc.json  README.md  docker-compose.yml  index.html  package-lock.json  package.json  pyproject.toml  vite.config.ts
scripts/: db.sh
src/app/: __init__.py  main.py
src/app/controllers/game/: __init__.py  coup_game.py  game_manager.py
src/app/controllers/rooms/: __init__.py  controller.py  utils.py
src/app/controllers/websockets/: __init__.py  connection_manager.py  message_handler.py
src/app/models/: game.py  room.py
src/app/routers/: rooms.py  websockets.py
src/client/: App.tsx  index.css
src/client/components/button/: Button.module.css  Button.tsx
src/client/components/card/: Card.module.css  Card.tsx
src/client/components/message-bar/: MessageBar.module.css  MessageBar.tsx  MessageBubble.tsx  index.ts
src/client/components/popup/: Popup.module.css  Popup.tsx  index.ts
src/client/constants/: cards.json
src/client/hooks/: useWebSocket.ts
src/client/pages/game-page/: GamePage.module.css  GamePage.page.tsx  GamePageOverride.css
src/client/pages/home-page/: home.page.tsx
src/client/pages/rooms-page/: rooms.page.tsx
src/client/services/: websocket.service.ts
src/client/types/: game.types.ts
src/client/utils/: game.utils.ts
src/static/: index.html
